Adicionado mapeamento das classes e suas configurações no hibernate.cfg

--- a/WebContent/templates/modeloGeral.xhtml
+++ b/WebContent/templates/modeloGeral.xhtml
@@ -32,24 +32,27 @@
 			<h:form id="formMenu">
 				<p:panelMenu id="panelMenu">
 					<p:submenu label="Arquivo">
+						
 						<p:menuitem value="Autenticação" />
 
 						<p:menuitem value="Principal" />
 
 						<p:menuitem value="Sair" />
+					
 					</p:submenu>
 
 					<p:submenu label="Cadastros">
-						<p:menuitem value="Fabricantes" />
 
 						<p:menuitem value="Funcionários" />
 
-						<p:menuitem value="Produtos" />
+						<p:menuitem value="Serviços" />
+
 					</p:submenu>
 
-					<p:submenu label="Vendas">
+					<p:submenu label="Benefícios">
+						
 						<p:menuitem value="Novo" />
-						<p:menuitem value="Pesquisa" />
+					
 					</p:submenu>
 
 					<p:submenu label="Relatórios">
