--- a/WebContent/templates/modeloGeral.xhtml
+++ b/WebContent/templates/modeloGeral.xhtml
@@ -32,27 +32,28 @@
 			<h:form id="formMenu">
 				<p:panelMenu id="panelMenu">
 					<p:submenu label="Arquivo">
-						
+
 						<p:menuitem value="Autenticação" />
 
 						<p:menuitem value="Principal" />
 
 						<p:menuitem value="Sair" />
-					
+
 					</p:submenu>
 
 					<p:submenu label="Cadastros">
 
-						<p:menuitem value="Funcionários" />
+						<p:menuitem value="Inscritos"
+							outcome="/pages/inscritoPesquisa.xhtml" />
 
-						<p:menuitem value="Serviços" />
+						<p:menuitem value="Beneficios" />
 
 					</p:submenu>
 
 					<p:submenu label="Benefícios">
-						
+
 						<p:menuitem value="Novo" />
-					
+
 					</p:submenu>
 
 					<p:submenu label="Relatórios">
