Criado dominio, dao e bean do usuario

--- a/WebContent/templates/modeloGeral.xhtml
+++ b/WebContent/templates/modeloGeral.xhtml
@@ -35,7 +35,7 @@
 
 						<p:menuitem value="Autenticação" />
 
-						<p:menuitem value="Principal" />
+						<p:menuitem value="Principal" outcome="/pages/principal.xhtml"/>
 
 						<p:menuitem value="Sair" />
 
@@ -47,6 +47,8 @@
 							outcome="/pages/inscritoPesquisa.xhtml" />
 
 						<p:menuitem value="Beneficios" />
+						
+						<p:menuitem value="Usuários" />
 
 					</p:submenu>
 
