--- a/WebContent/templates/modeloGeral.xhtml
+++ b/WebContent/templates/modeloGeral.xhtml
@@ -32,26 +32,28 @@
 			<h:form id="formMenu">
 				<p:panelMenu id="panelMenu">
 					<p:submenu label="Arquivo">
-
 						<p:menuitem value="Autenticação" />
 
-						<p:menuitem value="Principal" outcome="/pages/principal.xhtml"/>
+						<p:menuitem value="Principal" outcome="/pages/principal.xhtml" />
 
 						<p:menuitem value="Sair" />
-
 					</p:submenu>
 
 					<p:submenu label="Cadastros">
+						<p:menuitem value="Beneficios" />
 
 						<p:menuitem value="Inscritos"
 							outcome="/pages/inscritoPesquisa.xhtml" />
 
-						<p:menuitem value="Beneficios" />
-						
-						<p:menuitem value="Usuários" />
-
+						<p:menuitem value="Usuários"
+							outcome="/pages/usuarioPesquisa.xhtml" />
+							
+							<p:menuitem value="Oficinas/Cursos" />
 					</p:submenu>
-
+					
+					<p:submenu label="Relatórios">
+						<p:menuitem value="Beneficios" />
+					</p:submenu>
 				</p:panelMenu>
 			</h:form>
 		</p:layoutUnit>
