Finalizado crud atividade

--- a/WebContent/templates/modeloGeral.xhtml
+++ b/WebContent/templates/modeloGeral.xhtml
@@ -48,7 +48,7 @@
 						<p:menuitem value="Usuários"
 							outcome="/pages/usuarioPesquisa.xhtml" />
 							
-							<p:menuitem value="Oficinas/Cursos" />
+							<p:menuitem value="Atividades" outcome="/pages/atividadePesquisa.xhtml"/>
 					</p:submenu>
 					
 					<p:submenu label="Relatórios">
