Finalizado criação dominio e db beneficio

--- a/WebContent/templates/modeloGeral.xhtml
+++ b/WebContent/templates/modeloGeral.xhtml
@@ -40,6 +40,9 @@
 					</p:submenu>
 
 					<p:submenu label="Cadastros">
+						<p:menuitem value="Atividades"
+							outcome="/pages/atividadePesquisa.xhtml" />
+
 						<p:menuitem value="Beneficios" />
 
 						<p:menuitem value="Inscritos"
@@ -47,10 +50,8 @@
 
 						<p:menuitem value="Usuários"
 							outcome="/pages/usuarioPesquisa.xhtml" />
-							
-							<p:menuitem value="Atividades" outcome="/pages/atividadePesquisa.xhtml"/>
 					</p:submenu>
-					
+
 					<p:submenu label="Relatórios">
 						<p:menuitem value="Beneficios" />
 					</p:submenu>
