Finalizado crud beneficios

--- a/WebContent/templates/modeloGeral.xhtml
+++ b/WebContent/templates/modeloGeral.xhtml
@@ -43,7 +43,8 @@
 						<p:menuitem value="Atividades"
 							outcome="/pages/atividadePesquisa.xhtml" />
 
-						<p:menuitem value="Beneficios" />
+						<p:menuitem value="Beneficios"
+							outcome="/pages/beneficioPesquisa.xhtml" />
 
 						<p:menuitem value="Inscritos"
 							outcome="/pages/inscritoPesquisa.xhtml" />
