Acrescentada página sobre

--- a/WebContent/templates/modeloGeral.xhtml
+++ b/WebContent/templates/modeloGeral.xhtml
@@ -56,6 +56,10 @@
 					<p:submenu label="Relatórios">
 						<p:menuitem value="Beneficios" />
 					</p:submenu>
+
+					<p:submenu label="Informações">
+						<p:menuitem value="Sobre" outcome="/pages/sobre.xhtml" />
+					</p:submenu>
 				</p:panelMenu>
 			</h:form>
 		</p:layoutUnit>
