--- a/WebContent/templates/modeloGeral.xhtml
+++ b/WebContent/templates/modeloGeral.xhtml
@@ -57,6 +57,10 @@
 						<p:menuitem value="Beneficios" />
 					</p:submenu>
 
+					<p:submenu label="Backup">
+						<p:menuitem value="Backup" />
+					</p:submenu>
+
 					<p:submenu label="Informações">
 						<p:menuitem value="Sobre" outcome="/pages/sobre.xhtml" />
 					</p:submenu>
