Adicionado relatorios beneficios e inscritos

--- a/WebContent/reports/beneficio.jrxml
+++ b/WebContent/reports/beneficio.jrxml
@@ -4,7 +4,7 @@
 	<property name="com.jaspersoft.studio.data.sql.tables" value=""/>
 	<property name="com.jaspersoft.studio.data.sql.SQLQueryDesigner.sash.w1" value="182"/>
 	<property name="com.jaspersoft.studio.data.sql.SQLQueryDesigner.sash.w2" value="813"/>
-	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="Beneficio Data Adapter"/>
+	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="One Empty Record"/>
 	<queryString language="SQL">
 		<![CDATA[SELECT cadastrobeneficios.inscrito.nome AS inome,
 	cadastrobeneficios.beneficio.data_inicio,
