Finalizado relatório de inscritos

--- a/WebContent/templates/modeloGeral.xhtml
+++ b/WebContent/templates/modeloGeral.xhtml
@@ -57,6 +57,9 @@
 
 						<p:menuitem value="Aniversariantes do mês"
 							outcome="/pages/relatorioAniversariantes.xhtml" />
+
+						<p:menuitem value="Inscritos"
+							outcome="/pages/relatorioInscrito.xhtml" />
 					</p:submenu>
 
 					<p:submenu label="Backup">
